# CodeSense

./: .gitignore  CMakeLists.txt  README.md  sample.cpp
include/: CodeChunk.h  CodeParser.h  Config.h  Embedder.h  Embedding.h  EmbeddingLoader.h  FileScanner.h  FunctionDatabase.h  HNSWIndex.h  Indexer.h  QueryLoader.h  SearchEngine.h  TreeSitterParser.h
python/: app.py  embed.py  query_embed.py
src/: CodeParser.cpp  Embedder.cpp  EmbeddingLoader.cpp  FileScanner.cpp  FunctionDatabase.cpp  HNSWIndex.cpp  Indexer.cpp  QueryLoader.cpp  SearchEngine.cpp  TreeSitterParser.cpp  main.cpp
